--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pydantic-settings = "^2.1.0"
 fastapi-limiter = "^0.1.5"
 poetry = {extras = ["dotenv"], version = "^1.7.1"}
 django-environ = "^0.11.2"
+cloudinary = "^1.36.0"
 
 
 [build-system]
