--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ django-environ = "^0.11.2"
 cloudinary = "^1.36.0"
 
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^7.2.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
